--- a/config/database.yml
+++ b/config/database.yml
@@ -11,6 +11,7 @@ default: &default
 
 development:
   <<: *default
+  database: example_app_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -20,3 +21,5 @@ test:
 
 production:
   <<: *default
+  database: does_not_exist
+  user: does_not_exists
